<resources>
    <string name="app_name">Accessibility Demo</string>
    <string name="nav_header_title" translatable="false">Petra Ritter</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="images">Images</string>
    <string name="image_buttons">Image Buttons</string>
    <string name="headers">Headers</string>
    <string name="edit_fields">Edit Fields</string>
    <string name="contrast_ratios">Contrast Ratios</string>
    <string name="contact">Contact &amp; Usage</string>
    <string name="just_past_with_4_5_1_hex_00e9ff_on_5a4dad">Just passed with 4.5:1, HEX: #00e9ff on #5a4dad.</string>
    <string name="passt_with_21_0_1_hex_ffffff_on_000000">Passed with 21.0:1, HEX: #ffffff auf #000000.</string>
    <string name="fault_with_2_3_1_hex_ffffff_on_a0b0a1">Failed with 2.3:1, HEX: #ffffff on #a0b0a1.</string>
    <string name="first_name">First name</string>
    <string name="send">Send</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_last_name">Enter your Last name</string>
    <string name="this_image_has_no_contentdescription_so_that_the_screen_reader_ignored_completely">This image has no contentDescription so that the screen reader ignored completely.</string>
    <string name="flight_landed">flight landed</string>
    <string name="this_image_has_a_meaningful_contentdescription_so_that_screen_reader_users_can_perceive_it">This image has a meaningful contentDescription so that screen reader users can perceive it.</string>
    <string name="what_is_the_current_version_of_wcag">What is the current version of WCAG?</string>
    <string name="when_was_the_current_version_of_wcag_released">When was the current version of WCAG released?</string>
    <string name="get_the_answer_to_question_two">Get the answer to question two.</string>
    <string name="version_of_wcag">The current version of WCAG is 2.1.</string>
    <string name="released_wcag">The current version was released in june 2018.</string>
    <string name="header_html" translatable="false">heading.html</string>
    <string name="just_fault_with_4_4_1_hex_ffffff_on_0083a1">Just failed with 4.4:1, HEX: #ffffff on #0083a1</string>
    <string name="contact_html" translatable="false">contact.html</string>
    <string name="help">Get help to Last name</string>
    <string name="tab_order">Focus order</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="somethings_wrong">Oops, something went wrong with the tab order.</string>
    <string name="tab_correct">Now the tab order is correct.</string>
    <string name="your_last_name_is">Your last name is</string>
    <string name="your_first_name_is">"Your fist name is "</string>
    <string name="dark_mode_heading_.html" translatable="false">dark_mode_heading.html</string>
    <string name="dark_mode_contact.html" translatable="false">dark_mode_contact.html</string>
    <string name="reset_questions">Reset questions</string>
    <string name="welcome">Welcome to Accessibility-Demo</string>
    <string name="help_1">Get help to First name</string>
    <string name="send_1">Send First name</string>
    <string name="send_2">Send, Last name</string>

</resources>
