<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/imageFragment"
            android:icon="@drawable/ic_gif_black_24dp"
            android:title="@string/images" />
        <item
            android:id="@+id/imageButtonFragment"
            android:icon="@drawable/ic_baseline_radio_button_checked_24"
            android:title="@string/image_buttons" />

        <item
            android:id="@+id/headersFragment"
            android:icon="@drawable/ic_headers_menu_24"
            android:title="@string/headers" />
        <item
            android:id="@+id/editFieldFragment"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/edit_fields" />
        <item
            android:id="@+id/contrastFragment"
            android:icon="@drawable/ic_baseline_color_lens_24"
            android:title="@string/contrast_ratios" />

        <item
            android:id="@+id/contactFragment"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/contact" />



    </group>
</menu>
