<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageFragment">




        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityHeading="true"
            android:text="@string/images"
            android:textSize="30sp"
            android:layout_marginTop="90dp"
            android:layout_marginStart="140dp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_flight_landed"
            android:layout_marginStart="160dp"
            android:layout_marginTop="140dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_image_has_no_contentdescription_so_that_the_screen_reader_ignored_completely"
            android:layout_marginStart="20dp"
            android:layout_marginTop="210dp"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flight_landed"
            android:src="@mipmap/ic_flight_landed"
            android:layout_marginStart="160dp"
            android:layout_marginTop="280dp"/>
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_image_has_a_meaningful_contentdescription_so_that_screen_reader_users_can_perceive_it"
            android:layout_marginStart="20dp"
            android:layout_marginTop="360dp"
            android:layout_marginEnd="5dp"/>


</FrameLayout>