<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabOrderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginTop="76dp"
            android:accessibilityHeading="true"
            android:text="@string/tab_order"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="148dp"
            android:accessibilityLiveRegion="polite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView00" />

        <TextView
            android:id="@+id/label01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="300dp"
            android:text="@string/first_name"
            app:layout_constraintBottom_toTopOf="@+id/label02"
            app:layout_constraintEnd_toStartOf="@+id/editText01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText01"
            android:layout_width="293dp"
            android:layout_height="57dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/enter_your_first_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/textColorHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label01"
            app:layout_constraintTop_toBottomOf="@+id/textView00"
            tools:ignore="LabelFor" />
        <!--Adding a hint to EditText views is an alternative to labelFor but has the
         disadvantage that  hints disappears as soon as the user start to enter some text
         into the TextEdit view so that screen users loose the label for that view.
         For this reason I prefer to use android:labelFor="". -->

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="260dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_help_outline_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--This ImageButton has on  purpose set the contentDescription to nil because the
        contentDescription has been set in JAVA -->

        <Button
            android:id="@+id/button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="162dp"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText01" />

        <TextView
            android:id="@+id/textView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="148dp"
            android:accessibilityLiveRegion="polite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button01" />

        <TextView
            android:id="@+id/label02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="204dp"
            android:layout_marginEnd="17dp"
            android:labelFor="@id/editText02"
            android:text="@string/last_name"
            app:layout_constraintEnd_toStartOf="@+id/editText02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label01" />

        <EditText
            android:id="@+id/editText02"
            android:layout_width="278dp"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="38dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@color/textColorHint"
            app:layout_constraintBottom_toTopOf="@+id/button02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label02"
            app:layout_constraintTop_toBottomOf="@+id/textView02" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="190dp"
            android:layout_marginBottom="120dp"
            android:accessibilityTraversalAfter="@id/button02"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_help_outline_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label02" />
        <!--This ImageButton has on  purpose set the contentDescription to nil because
        the contentDescription has been set in JAVA -->

        <Button
            android:id="@+id/button02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="162dp"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText02" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>